--- a/index.html
+++ b/index.html
@@ -7,60 +7,64 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { background-color: #000; color: #fff; font-family: 'Segoe UI', sans-serif; overflow: hidden; height: 100vh; }
+        body { background-color: #000; color: #0f0; font-family: 'Courier New', monospace; overflow: hidden; height: 100vh; }
 
         /* MATRIX INTRO */
         #intro-screen { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: #000; z-index: 10000; display: flex; flex-direction: column; justify-content: center; align-items: center; }
         #matrix-canvas { position: absolute; top: 0; left: 0; z-index: 1; }
         .intro-content { position: relative; z-index: 2; text-align: center; }
-        .t1, .t2 { font-size: 35px; font-weight: bold; color: #0f0; text-transform: uppercase; letter-spacing: 5px; text-shadow: 0 0 20px #0f0; opacity: 0; }
-        .t1 { animation: fadeIn 2s forwards 1s; }
-        .t2 { animation: fadeIn 2s forwards 3s; }
-        @keyframes fadeIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
 
-        /* MAIN CONTENT */
+        /* MAIN */
         #main-content { display: none; opacity: 0; transition: 1s; height: 100vh; width: 100%; position: relative; z-index: 100; }
-        .page { position: absolute; width: 100%; height: 100%; display: none; flex-direction: column; align-items: center; justify-content: center; padding: 20px; text-align: center; }
+        .page { position: absolute; width: 100%; height: 100%; display: none; flex-direction: column; align-items: center; justify-content: center; padding: 20px; }
         .active { display: flex; }
 
-        /* ANTIQA SHAKLLAR (2-PAGE) */
-        .shape-box { position: relative; width: 180px; height: 180px; margin-bottom: 20px; display: flex; align-items: center; justify-content: center; }
-        .cyber-square { position: absolute; width: 100%; height: 100%; border: 2px solid #0f0; animation: rotate 4s linear infinite; box-shadow: 0 0 15px #0f0; }
-        .cyber-triangle { position: absolute; width: 80%; height: 80%; border-left: 2px solid #0f0; border-bottom: 2px solid #0f0; transform: rotate(45deg); animation: rotate 3s linear infinite reverse; opacity: 0.6; }
-        #clock-2 { font-size: 24px; font-weight: bold; color: #0f0; text-shadow: 0 0 10px #0f0; z-index: 5; font-family: monospace; }
+        /* VIRTUAL CLOCK (2-PAGE) */
+        .v-clock { text-align: center; margin-bottom: 20px; animation: glitch 2s infinite; }
+        .clock-img { width: 180px; height: 180px; border: 2px solid #0f0; border-radius: 50%; box-shadow: 0 0 20px #0f0; display: flex; align-items: center; justify-content: center; position: relative; background: rgba(0,255,0,0.05); }
+        .clock-img::before { content: ""; position: absolute; width: 110%; height: 110%; border: 1px dashed #0f0; border-radius: 50%; animation: rot 15s linear infinite; }
+        #big-time { font-size: 28px; font-weight: bold; text-shadow: 0 0 10px #0f0; }
 
-        /* TITRASH EFFEKTI */
-        .glitch-active { animation: shake 0.15s infinite; }
-        @keyframes shake {
-            0% { transform: translate(1px, 1px) rotate(0deg); }
-            20% { transform: translate(-2px, -1px) rotate(-0.5deg); color: #ff0000; }
-            40% { transform: translate(-1px, 2px) rotate(0.5deg); }
-            60% { transform: translate(2px, 1px) rotate(-0.5deg); color: #0000ff; }
-            100% { transform: translate(1px, -2px) rotate(0deg); color: #0f0; }
+        /* CYBER PANELS (MEDIA ZONE) */
+        .media-zone { width: 100%; max-width: 360px; display: flex; flex-direction: column; gap: 15px; }
+        .cyber-panel { border: 2px solid #0f0; background: rgba(0, 255, 0, 0.03); padding: 10px; border-radius: 5px; position: relative; box-shadow: inset 0 0 15px rgba(0, 255, 0, 0.1); }
+        .cyber-panel::before { content: "◢"; position: absolute; top: -5px; left: -5px; color: #0f0; font-size: 15px; }
+        .cyber-panel::after { content: "◣"; position: absolute; bottom: -5px; right: -5px; color: #0f0; font-size: 15px; }
+        
+        .panel-title { font-size: 12px; margin-bottom: 8px; letter-spacing: 2px; border-bottom: 1px solid #0f0; display: inline-block; }
+        
+        audio { width: 100%; height: 30px; filter: invert(100%) hue-rotate(90deg) brightness(1.5); }
+        video { width: 100%; border: 1px solid #0f0; border-radius: 3px; }
+
+        /* TITRASH (GLITCH) */
+        @keyframes glitch {
+            0% { transform: translate(0); }
+            20% { transform: translate(-2px, 2px); }
+            40% { transform: translate(-2px, -2px); }
+            60% { transform: translate(2px, 2px); }
+            80% { transform: translate(2px, -2px); }
+            100% { transform: translate(0); }
         }
+        @keyframes rot { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
 
-        @keyframes rotate { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
+        /* 1-PAGE PROFILE */
+        .avatar { width: 100px; height: 100px; border: 2px solid #0f0; margin-bottom: 15px; box-shadow: 0 0 15px #0f0; }
+        .card { width: 280px; padding: 12px; margin: 5px; border: 1px solid #0f0; text-decoration: none; color: #0f0; font-weight: bold; display: flex; align-items: center; transition: 0.3s; }
+        .card:hover { background: #0f0; color: #000; box-shadow: 0 0 20px #0f0; }
+        .card i { margin-right: 15px; }
 
-        /* PROFILE (1-PAGE) */
-        .avatar { width: 110px; height: 110px; border-radius: 50%; border: 3px solid #0f0; margin-bottom: 15px; box-shadow: 0 0 20px #0f0; }
-        .card { width: 280px; padding: 14px; margin: 6px 0; border-radius: 12px; text-decoration: none; color: #fff; font-weight: bold; display: flex; align-items: center; background: rgba(255,255,255,0.05); border: 1px solid rgba(255,255,255,0.1); }
-        .card i { margin-right: 15px; font-size: 24px; }
-
-        /* PLAYER & FORM */
-        .cyber-panel { width: 320px; padding: 15px; background: rgba(0, 255, 0, 0.05); border: 1px solid #0f0; border-radius: 10px; margin-bottom: 15px; }
-        audio { width: 100%; height: 35px; filter: invert(100%) hue-rotate(90deg); }
-        video { width: 100%; border-radius: 8px; border: 1px solid #0f0; }
-
-        /* NAV BUTTONS */
-        .nav-btn { position: fixed; top: 50%; transform: translateY(-50%); font-size: 45px; color: #0f0; cursor: pointer; z-index: 5000; opacity: 0.6; }
-        #nextBtn { right: 5px; } #prevBtn { left: 5px; display: none; }
+        /* NAV */
+        .nav-btn { position: fixed; top: 50%; transform: translateY(-50%); font-size: 40px; color: #0f0; cursor: pointer; z-index: 5000; text-shadow: 0 0 10px #0f0; }
+        #nextBtn { right: 10px; } #prevBtn { left: 10px; display: none; }
     </style>
 </head>
-<body onclick="createSnowParticles(event)">
+<body>
 
     <div id="intro-screen">
         <canvas id="matrix-canvas"></canvas>
-        <div class="intro-content"><div class="t1">Assalomu</div><div class="t2">Alaykum</div></div>
+        <div class="intro-content">
+            <h1 style="color:#0f0; font-size: 20px; letter-spacing: 10px; animation: glitch 1s infinite;">INITIALIZING...</h1>
+        </div>
     </div>
 
     <div id="main-content">
@@ -69,32 +73,40 @@
 
         <div class="page active" id="p1">
             <img src="https://img.freepik.com/free-vector/hacker-operating-laptop-cartoon-icon-illustration_138676-2387.jpg" class="avatar">
-            <h2 style="color:#0f0; margin-bottom: 15px;">Asadbek</h2>
-            <a href="https://instagram.com/ezz_mafiya" class="card"><i class="fab fa-instagram" style="color:#E1306C"></i> Instagram</a>
-            <a href="https://t.me/Pain_2007" class="card"><i class="fab fa-telegram" style="color:#0088cc"></i> Telegram</a>
-            <a href="https://youtube.com/@meliqoziyev" class="card"><i class="fab fa-youtube" style="color:#FF0000"></i> YouTube</a>
+            <h2 style="margin-bottom: 20px; letter-spacing: 5px;">ASADBEK</h2>
+            <a href="https://instagram.com/ezz_mafiya" class="card"><i class="fab fa-instagram"></i> INSTAGRAM</a>
+            <a href="https://t.me/Pain_2007" class="card"><i class="fab fa-telegram"></i> TELEGRAM</a>
+            <a href="https://youtube.com/@meliqoziyev" class="card"><i class="fab fa-youtube"></i> YOUTUBE</a>
         </div>
 
         <div class="page" id="p2">
-            <div class="shape-box" id="glitch-target">
-                <div class="cyber-square"></div>
-                <div class="cyber-triangle"></div>
-                <div id="clock-2">00:00:00</div>
+            <div class="v-clock">
+                <span style="font-size: 10px; letter-spacing: 5px;">VIRTUAL CLOCK</span>
+                <div class="clock-img">
+                    <div id="big-time">00:00:00</div>
+                </div>
             </div>
 
-            <div class="cyber-panel" id="player-panel">
-                <audio id="myAudio" controls><source src="https://raw.githubusercontent.com/meliqoziyevuz/Asadbek/main/Elvin%20Mirz%C9%99zad%C9%99%20-%20D%C3%BC%C5%9F%C3%BCn%20M%C9%99ni.mp3" type="audio/mpeg"></audio>
-                <video id="myVideo" controls><source src="https://raw.githubusercontent.com/meliqoziyevuz/Asadbek/main/VID_20260217_042543_562.mp4" type="video/mp4"></video>
+            <div class="media-zone">
+                <div class="cyber-panel">
+                    <span class="panel-title">AUDIO STREAM</span>
+                    <audio id="myAudio" controls><source src="https://raw.githubusercontent.com/meliqoziyevuz/Asadbek/main/Elvin%20Mirz%C9%99zad%C9%99%20-%20D%C3%BC%C5%9F%C3%BCn%20M%C9%99ni.mp3" type="audio/mpeg"></audio>
+                </div>
+
+                <div class="cyber-panel" id="video-p">
+                    <span class="panel-title">VIDEO FEED</span>
+                    <video id="myVideo" controls><source src="https://raw.githubusercontent.com/meliqoziyevuz/Asadbek/main/VID_20260217_042543_562.mp4" type="video/mp4"></video>
+                    <div style="font-size: 8px; margin-top: 5px; color: #f00;">WARNING: GLITCH DETECTED</div>
+                </div>
             </div>
-            <p id="status" style="color:#0f0; font-size: 10px; letter-spacing: 2px;">SYSTEM READY</p>
         </div>
 
         <div class="page" id="p3">
-            <div class="cyber-panel" style="width:310px;">
-                <h3 style="color:#0f0; margin-bottom:15px;">MESSAGE</h3>
-                <input type="text" id="uName" placeholder="Name" style="width:100%; background:none; border:1px solid #0f0; color:#fff; padding:10px; margin-bottom:10px;">
-                <textarea id="uMsg" placeholder="Text..." style="width:100%; background:none; border:1px solid #0f0; color:#fff; padding:10px; margin-bottom:10px;"></textarea>
-                <button onclick="sendTele()" style="width:100%; padding:10px; background:#0f0; border:none; font-weight:bold; cursor:pointer;">SEND</button>
+            <div class="cyber-panel" style="width: 300px;">
+                <span class="panel-title">SECURE MESSAGE</span>
+                <input type="text" id="uName" placeholder="USER_ID" style="width:100%; background:none; border:1px solid #0f0; color:#0f0; padding:10px; margin: 10px 0;">
+                <textarea id="uMsg" placeholder="DATA_CONTENT" style="width:100%; background:none; border:1px solid #0f0; color:#0f0; padding:10px; margin-bottom:10px;"></textarea>
+                <button onclick="sendTele()" style="width:100%; padding:10px; background:#0f0; color:#000; border:none; font-weight:bold; cursor:pointer;">EXECUTE SEND</button>
             </div>
         </div>
     </div>
@@ -102,23 +114,11 @@
     <script>
         const audio = document.getElementById('myAudio');
         const video = document.getElementById('myVideo');
-        const glitchBox = document.getElementById('glitch-target');
-        const playerPanel = document.getElementById('player-panel');
-        const status = document.getElementById('status');
+        const videoPanel = document.getElementById('video-p');
 
-        audio.onplay = () => {
-            glitchBox.classList.add('glitch-active');
-            playerPanel.classList.add('glitch-active');
-            status.innerText = "WARNING: GLITCH DETECTED";
-            status.style.color = "#f00";
-            video.pause();
-        };
-        audio.onpause = () => {
-            glitchBox.classList.remove('glitch-active');
-            playerPanel.classList.remove('glitch-active');
-            status.innerText = "SYSTEM STABLE";
-            status.style.color = "#0f0";
-        };
+        audio.onplay = () => { video.pause(); videoPanel.style.animation = "glitch 0.2s infinite"; };
+        audio.onpause = () => { videoPanel.style.animation = "none"; };
+        video.onplay = () => { audio.pause(); videoPanel.style.animation = "glitch 0.1s infinite"; };
 
         // Matrix
         const mCanvas = document.getElementById('matrix-canvas');
@@ -126,7 +126,7 @@
         mCanvas.width = window.innerWidth; mCanvas.height = window.innerHeight;
         const drops = new Array(Math.floor(mCanvas.width / 20)).fill(1);
         function drawMatrix() {
-            mCtx.fillStyle = 'rgba(0, 0, 0, 0.05)'; mCtx.fillRect(0, 0, mCanvas.width, mCanvas.height);
+            mCtx.fillStyle = 'rgba(0, 0, 0, 0.1)'; mCtx.fillRect(0, 0, mCanvas.width, mCanvas.height);
             mCtx.fillStyle = '#0f0'; mCtx.font = '20px monospace';
             drops.forEach((y, i) => {
                 mCtx.fillText(Math.floor(Math.random()*2), i*20, y*20);
@@ -139,13 +139,13 @@
         setTimeout(() => {
             clearInterval(mInt);
             document.getElementById('intro-screen').style.display = 'none';
-            const main = document.getElementById('main-content');
-            main.style.display = 'block';
-            setTimeout(() => { main.style.opacity = '1'; }, 50);
-        }, 7000);
+            document.getElementById('main-content').style.display = 'block';
+            setTimeout(() => { document.getElementById('main-content').style.opacity = '1'; }, 50);
+        }, 5000);
 
         function updateClock() {
-            document.getElementById('clock-2').innerText = new Date().toLocaleTimeString();
+            const now = new Date();
+            document.getElementById('big-time').innerText = now.toLocaleTimeString();
         }
         setInterval(updateClock, 1000);
 
@@ -159,22 +159,11 @@
             audio.pause(); video.pause();
         }
 
-        function createSnowParticles(e) {
-            const p = document.createElement('div');
-            p.style.position = 'absolute'; p.style.background = '#0f0';
-            p.style.width = p.style.height = '4px';
-            p.style.left = e.clientX + 'px'; p.style.top = e.clientY + 'px';
-            p.style.pointerEvents = 'none';
-            document.body.appendChild(p);
-            p.animate([{opacity:1}, {transform:'translate(0, 50px)', opacity:0}], {duration:800});
-            setTimeout(() => p.remove(), 800);
-        }
-
         function sendTele() {
             const n = document.getElementById('uName').value;
             const m = document.getElementById('uMsg').value;
             fetch(`https://api.telegram.org/bot7725172926:AAHaVKSy6J-oaQnBSYy5bGKqSKIr-UQrOIM/sendMessage?chat_id=6804374367&text=User: ${n}%0AMessage: ${m}`)
-            .then(() => alert("SENT!"));
+            .then(() => alert("SIGNAL SENT"));
         }
     </script>
 </body>
