--- a/index.html
+++ b/index.html
@@ -9,17 +9,16 @@
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { background-color: #000; color: #fff; font-family: 'Segoe UI', sans-serif; overflow: hidden; height: 100vh; }
 
-        /* SNOW & MATRIX CANVAS */
-        canvas { position: fixed; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; }
-        #matrix-canvas { z-index: 1; }
-        #snow-canvas { z-index: 2; pointer-events: auto; }
+        /* CANVASES */
+        canvas { position: fixed; top: 0; left: 0; width: 100%; height: 100%; }
+        #matrix-canvas { z-index: 10005; background: #000; } /* Intro uchun tepada */
+        #snow-canvas { z-index: 1; pointer-events: none; } /* Doimiy orqa fonda */
 
-        /* MATRIX INTRO */
-        #intro-screen { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: #000; z-index: 10000; display: flex; flex-direction: column; justify-content: center; align-items: center; }
-        .intro-content { position: relative; z-index: 10001; text-align: center; }
-        .t1, .t2 { font-size: 35px; font-weight: bold; color: #0f0; text-transform: uppercase; letter-spacing: 5px; text-shadow: 0 0 20px #0f0; opacity: 0; }
-        .t1 { animation: fadeIn 2s forwards 1s; }
-        .t2 { animation: fadeIn 2s forwards 3s; }
+        /* INTRO TEXT */
+        #intro-screen { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 10010; display: flex; justify-content: center; align-items: center; pointer-events: none; }
+        .intro-content { text-align: center; }
+        .t1 { font-size: 35px; font-weight: bold; color: #0f0; text-transform: uppercase; letter-spacing: 5px; text-shadow: 0 0 20px #0f0; opacity: 0; animation: fadeIn 2s forwards 1s; }
+
         @keyframes fadeIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
 
         /* MAIN CONTENT */
@@ -28,33 +27,24 @@
         .active { display: flex; }
 
         /* PROFILE */
-        .avatar { width: 100px; height: 100px; border-radius: 50%; border: 3px solid #0f0; margin-bottom: 15px; box-shadow: 0 0 20px #0f0; z-index: 101; }
-        .card { width: 280px; padding: 12px; margin: 6px 0; border-radius: 12px; text-decoration: none; color: #fff; font-weight: bold; display: flex; align-items: center; background: rgba(0, 255, 0, 0.05); border: 1px solid rgba(0, 255, 0, 0.2); transition: 0.3s; z-index: 101; }
-        .card:hover { background: rgba(0, 255, 0, 0.15); border-color: #0f0; transform: scale(1.02); }
+        .avatar { width: 100px; border-radius: 50%; border: 3px solid #0f0; margin-bottom: 15px; box-shadow: 0 0 20px #0f0; }
+        .card { width: 280px; padding: 12px; margin: 6px 0; border-radius: 12px; text-decoration: none; color: #fff; font-weight: bold; display: flex; align-items: center; background: rgba(0, 255, 0, 0.1); border: 1px solid #0f0; }
         .card i { margin-right: 15px; font-size: 22px; }
 
         /* VIDEO PLAYER */
-        .cyber-panel { border: 1px solid #0f0; background: rgba(0, 255, 0, 0.03); padding: 12px; border-radius: 10px; position: relative; width: 100%; max-width: 360px; margin-bottom: 15px; z-index: 101; }
-        .cyber-panel::before { content: attr(data-label); position: absolute; top: -10px; left: 10px; background: #000; color: #0f0; font-size: 9px; padding: 0 5px; letter-spacing: 2px; border: 1px solid #0f0; }
-        #video-player { width: 100%; border: 1px solid rgba(0,255,0,0.4); border-radius: 5px; cursor: pointer; }
-        .video-controls { display: flex; justify-content: center; gap: 30px; margin-top: 15px; }
-        .v-nav-btn { background: transparent; border: 1.5px solid #0f0; color: #0f0; width: 50px; height: 50px; border-radius: 50%; cursor: pointer; display: flex; align-items: center; justify-content: center; transition: 0.3s; }
-        .v-nav-btn:hover { background: rgba(0, 255, 0, 0.1); box-shadow: 0 0 20px #0f0; }
-
-        /* NAV BUTTONS */
-        .nav-btn { position: fixed; top: 50%; transform: translateY(-50%); font-size: 45px; color: #0f0; cursor: pointer; z-index: 5000; opacity: 0.6; }
-        #nextBtn { right: 5px; } #prevBtn { left: 5px; display: none; }
-
-        #big-time { font-size: 20px; color: #0f0; font-family: monospace; margin-bottom: 10px; text-shadow: 0 0 10px #0f0; }
-        audio { width: 100%; height: 35px; filter: invert(100%) hue-rotate(90deg) brightness(1.5); }
+        .cyber-panel { border: 1px solid #0f0; background: rgba(0, 0, 0, 0.6); padding: 12px; border-radius: 10px; position: relative; width: 100%; max-width: 360px; margin-bottom: 15px; }
+        .cyber-panel::before { content: attr(data-label); position: absolute; top: -10px; left: 10px; background: #000; color: #0f0; font-size: 9px; padding: 0 5px; border: 1px solid #0f0; }
+        #video-player { width: 100%; border-radius: 5px; cursor: pointer; display: block; }
         
-        /* CONTACT */
-        .contact-box { width: 310px; padding: 25px; background: rgba(0,0,0,0.8); border-radius: 20px; border: 1.5px solid #0f0; z-index: 101; }
-        input, textarea { width: 100%; padding: 14px; margin: 10px 0; background: #000; border: 1.5px solid #0f0; color: #fff; border-radius: 12px; outline: none; }
-        button#send-btn { width: 100%; padding: 14px; background: #0f0; border: none; font-weight: bold; cursor: pointer; border-radius: 12px; color: #000; }
+        .video-controls { display: flex; justify-content: center; gap: 20px; margin-top: 15px; }
+        .v-nav-btn { background: transparent; border: 1.5px solid #0f0; color: #0f0; width: 45px; height: 45px; border-radius: 50%; cursor: pointer; font-size: 18px; }
 
-        .glitch-active { animation: shake 0.2s infinite; }
-        @keyframes shake { 0% { transform: translate(1px, 1px); } 50% { transform: translate(-1px, -1px); } 100% { transform: translate(0); } }
+        /* NAVIGATION */
+        .nav-btn { position: fixed; top: 50%; transform: translateY(-50%); font-size: 40px; color: #0f0; cursor: pointer; z-index: 5000; }
+        #nextBtn { right: 10px; } #prevBtn { left: 10px; display: none; }
+
+        #big-time { font-size: 22px; color: #0f0; font-family: monospace; margin-bottom: 15px; text-shadow: 0 0 10px #0f0; }
+        audio { width: 100%; height: 35px; filter: invert(100%) hue-rotate(90deg); }
     </style>
 </head>
 <body>
@@ -63,7 +53,7 @@
     <canvas id="snow-canvas"></canvas>
 
     <div id="intro-screen">
-        <div class="intro-content"><div class="t1">Assalomu</div><div class="t2">Alaykum</div></div>
+        <div class="intro-content"><div class="t1">Assalomu Alaykum</div></div>
     </div>
 
     <div id="main-content">
@@ -72,18 +62,18 @@
 
         <div class="page active" id="p1">
             <img src="https://img.freepik.com/free-vector/hacker-operating-laptop-cartoon-icon-illustration_138676-2387.jpg" class="avatar">
-            <h2 style="color:#0f0; margin-bottom: 15px; text-shadow: 0 0 10px #0f0;">Asadbek</h2>
-            <a href="https://instagram.com/ezz_mafiya" class="card"><i class="fab fa-instagram" style="color:#E1306C"></i> Instagram</a>
-            <a href="https://t.me/Pain_2007" class="card"><i class="fab fa-telegram" style="color:#0088cc"></i> Telegram</a>
-            <a href="https://youtube.com/@meliqoziyev" class="card"><i class="fab fa-youtube" style="color:#FF0000"></i> YouTube</a>
+            <h2 style="color:#0f0; margin-bottom: 15px;">Asadbek</h2>
+            <a href="https://instagram.com/ezz_mafiya" class="card"><i class="fab fa-instagram"></i> Instagram</a>
+            <a href="https://t.me/Pain_2007" class="card"><i class="fab fa-telegram"></i> Telegram</a>
+            <a href="https://youtube.com/@meliqoziyev" class="card"><i class="fab fa-youtube"></i> YouTube</a>
         </div>
 
         <div class="page" id="p2">
             <div id="big-time">00:00:00</div>
-            <div class="cyber-panel" data-label="AUDIO_STREAM" id="a-box">
+            <div class="cyber-panel" data-label="AUDIO">
                 <audio id="myAudio" controls><source src="https://raw.githubusercontent.com/meliqoziyevuz/Asadbek/main/Elvin%20Mirz%C9%99zad%C9%99%20-%20D%C3%BC%C5%9F%C3%BCn%20M%C9%99ni.mp3" type="audio/mpeg"></audio>
             </div>
-            <div class="cyber-panel" data-label="VIDEO_FEED" id="v-box">
+            <div class="cyber-panel" data-label="VIDEO">
                 <video id="video-player" poster="https://img.freepik.com/free-vector/digital-futuristic-background_23-2148403328.jpg" preload="metadata" onclick="togglePlay()">
                     <source id="video-source" src="https://raw.githubusercontent.com/meliqoziyevuz/Asadbek/main/VID_20260217_042543_562.mp4" type="video/mp4">
                 </video>
@@ -96,17 +86,17 @@
         </div>
 
         <div class="page" id="p3">
-            <div class="contact-box">
-                <h3 style="color:#0f0; margin-bottom:15px; letter-spacing:2px;">ALOQA</h3>
-                <input type="text" id="uName" placeholder="Ismingiz">
-                <textarea id="uMsg" rows="4" placeholder="Xabaringiz..."></textarea>
-                <button id="send-btn" onclick="sendTele()">Yuborish</button>
+            <div style="background:rgba(0,0,0,0.8); padding:20px; border:1px solid #0f0; border-radius:15px; width:300px;">
+                <h3 style="color:#0f0; margin-bottom:10px;">ALOQA</h3>
+                <input type="text" id="uName" placeholder="Ismingiz" style="width:100%; padding:10px; margin:5px 0; background:#000; border:1px solid #0f0; color:#fff;">
+                <textarea id="uMsg" placeholder="Xabar..." style="width:100%; padding:10px; margin:5px 0; background:#000; border:1px solid #0f0; color:#fff;"></textarea>
+                <button onclick="sendTele()" style="width:100%; padding:10px; background:#0f0; border:none; font-weight:bold; cursor:pointer;">YUBORISH</button>
             </div>
         </div>
     </div>
 
     <script>
-        // --- MATRIX EFFECT ---
+        // --- MATRIX (INTRO UCHUN) ---
         const mCanvas = document.getElementById('matrix-canvas');
         const mCtx = mCanvas.getContext('2d');
         mCanvas.width = window.innerWidth; mCanvas.height = window.innerHeight;
@@ -120,57 +110,49 @@
                 matrixDrops[i]++;
             });
         }
-        setInterval(drawMatrix, 50);
+        let matrixInterval = setInterval(drawMatrix, 50);
 
-        // --- SNOW EFFECT ---
+        // --- SNOW (ASOSIY FON UCHUN) ---
         const sCanvas = document.getElementById('snow-canvas');
         const sCtx = sCanvas.getContext('2d');
         sCanvas.width = window.innerWidth; sCanvas.height = window.innerHeight;
         let particles = [];
         class Particle {
-            constructor(x, y, r, dx, dy) {
-                this.x = x; this.y = y; this.r = r; this.dx = dx; this.dy = dy;
-                this.opacity = Math.random();
-            }
-            draw() {
-                sCtx.beginPath();
-                sCtx.arc(this.x, this.y, this.r, 0, Math.PI*2);
-                sCtx.fillStyle = `rgba(255, 255, 255, ${this.opacity})`;
-                sCtx.fill();
-            }
-            update() {
-                this.x += this.dx; this.y += this.dy;
-                if (this.y > sCanvas.height) { this.y = -10; this.x = Math.random() * sCanvas.width; }
-                this.draw();
-            }
+            constructor(x, y, r, dx, dy) { this.x = x; this.y = y; this.r = r; this.dx = dx; this.dy = dy; this.opacity = Math.random(); }
+            draw() { sCtx.beginPath(); sCtx.arc(this.x, this.y, this.r, 0, Math.PI*2); sCtx.fillStyle = `rgba(255,255,255,${this.opacity})`; sCtx.fill(); }
+            update() { this.x += this.dx; this.y += this.dy; if (this.y > sCanvas.height) { this.y = -10; this.x = Math.random() * sCanvas.width; } this.draw(); }
         }
-        for(let i=0; i<100; i++) {
-            particles.push(new Particle(Math.random()*sCanvas.width, Math.random()*sCanvas.height, Math.random()*3, Math.random()*1-0.5, Math.random()*2+1));
-        }
+        for(let i=0; i<100; i++) particles.push(new Particle(Math.random()*sCanvas.width, Math.random()*sCanvas.height, Math.random()*3, Math.random()*1-0.5, Math.random()*2+1));
+        
+        function animateSnow() { sCtx.clearRect(0, 0, sCanvas.width, sCanvas.height); particles.forEach(p => p.update()); requestAnimationFrame(animateSnow); }
+        animateSnow();
 
-        // SNOW EXPLOSION ON CLICK
+        // BOSSA QOR SACHRASHI
         window.addEventListener('mousedown', (e) => {
-            for(let i=0; i<15; i++) {
-                let p = new Particle(e.clientX, e.clientY, Math.random()*3+1, (Math.random()-0.5)*10, (Math.random()-0.5)*10);
-                particles.push(p);
-                setTimeout(() => { particles.splice(particles.indexOf(p), 1); }, 1000);
+            for(let i=0; i<10; i++) {
+                let p = new Particle(e.clientX, e.clientY, Math.random()*3, (Math.random()-0.5)*8, (Math.random()-0.5)*8);
+                particles.push(p); setTimeout(() => { particles.splice(particles.indexOf(p), 1); }, 800);
             }
         });
 
-        function animateSnow() {
-            sCtx.clearRect(0, 0, sCanvas.width, sCanvas.height);
-            particles.forEach(p => p.update());
-            requestAnimationFrame(animateSnow);
-        }
-        animateSnow();
+        // --- INTRO TUGASHI ---
+        setTimeout(() => {
+            clearInterval(matrixInterval);
+            mCanvas.style.transition = "2s";
+            mCanvas.style.opacity = "0";
+            document.getElementById('intro-screen').style.display = 'none';
+            setTimeout(() => { 
+                mCanvas.style.display = 'none';
+                document.getElementById('main-content').style.display = 'block';
+                setTimeout(() => { document.getElementById('main-content').style.opacity = '1'; }, 50);
+            }, 2000);
+        }, 5000);
 
-        // --- VIDEO PLAYER LOGIC ---
-        const audio = document.getElementById('myAudio');
+        // --- VIDEO PLAYER ---
         const video = document.getElementById('video-player');
         const vSource = document.getElementById('video-source');
         const ppBtn = document.getElementById('play-pause-btn');
-        const aBox = document.getElementById('a-box');
-        const vBox = document.getElementById('v-box');
+        const audio = document.getElementById('myAudio');
         const playlist = [
             "https://raw.githubusercontent.com/meliqoziyevuz/Asadbek/main/VID_20260217_042543_562.mp4",
             "https://raw.githubusercontent.com/meliqoziyevuz/Asadbek/main/VID_20260217_211420_755.mp4"
@@ -183,42 +165,25 @@
         }
 
         function changeVideo(step) {
-            currentIdx += step;
-            if (currentIdx >= playlist.length) currentIdx = 0;
-            if (currentIdx < 0) currentIdx = playlist.length - 1;
+            currentIdx = (currentIdx + step + playlist.length) % playlist.length;
             video.pause(); vSource.src = playlist[currentIdx]; video.load();
             ppBtn.innerHTML = '<i class="fas fa-play"></i>';
         }
 
-        audio.onplay = () => { video.pause(); ppBtn.innerHTML = '<i class="fas fa-play"></i>'; aBox.classList.add('glitch-active'); vBox.classList.remove('glitch-active'); };
-        video.onplay = () => { vBox.classList.add('glitch-active'); aBox.classList.remove('glitch-active'); };
-        video.onpause = () => { vBox.classList.remove('glitch-active'); };
-
         // --- UTILS ---
-        setTimeout(() => {
-            document.getElementById('intro-screen').style.display = 'none';
-            document.getElementById('main-content').style.display = 'block';
-            setTimeout(() => { document.getElementById('main-content').style.opacity = '1'; }, 50);
-        }, 5000);
-
-        setInterval(() => {
-            document.getElementById('big-time').innerText = new Date().toLocaleTimeString('uz-UZ', { hour12: false });
-        }, 1000);
-
+        setInterval(() => { document.getElementById('big-time').innerText = new Date().toLocaleTimeString('uz-UZ', { hour12: false }); }, 1000);
         function movePage(s) {
-            let p1 = document.getElementById('p1'), p2 = document.getElementById('p2'), p3 = document.getElementById('p3');
-            let pages = [p1, p2, p3]; let curr = 0;
-            pages.forEach((p, i) => { if(p.classList.contains('active')) curr = i+1; });
-            document.getElementById('p'+curr).classList.remove('active');
-            let next = curr + s; document.getElementById('p'+next).classList.add('active');
-            document.getElementById('prevBtn').style.display = (next==1)?'none':'block';
-            document.getElementById('nextBtn').style.display = (next==3)?'none':'block';
-            video.pause(); audio.pause(); ppBtn.innerHTML = '<i class="fas fa-play"></i>';
+            let curr = document.querySelector('.page.active');
+            let nextNum = parseInt(curr.id.replace('p', '')) + s;
+            curr.classList.remove('active');
+            document.getElementById('p'+nextNum).classList.add('active');
+            document.getElementById('prevBtn').style.display = (nextNum==1)?'none':'block';
+            document.getElementById('nextBtn').style.display = (nextNum==3)?'none':'block';
+            video.pause(); audio.pause();
         }
-
         function sendTele() {
             const n = document.getElementById('uName'), m = document.getElementById('uMsg');
-            if(n.value === "" || m.value === "") return;
+            if(!n.value || !m.value) return;
             fetch(`https://api.telegram.org/bot7725172926:AAHaVKSy6J-oaQnBSYy5bGKqSKIr-UQrOIM/sendMessage?chat_id=6804374367&text=User: ${n.value}%0AMessage: ${m.value}`)
             .then(() => { alert("Yuborildi!"); n.value = ""; m.value = ""; });
         }
